resolve the touch jump issue!

--- a/Eleye/Common/ZSSRichTextEditor/main.less
+++ b/Eleye/Common/ZSSRichTextEditor/main.less
@@ -13,8 +13,8 @@ body {
     background: #fff !important;
     color: #4a4a4a !important;
     padding: 10px !important;
-    /*overflow-y: scroll !important;*/
-    /*-webkit-overflow-scrolling: touch !important;*/
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
     height: 100% !important;
     font-size: 16px !important;
 }
